add lesson 2 study
- edittext
- event

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,8 @@
         android:layout_height="wrap_content"
         android:text="눌러보세요" />
 
+    <include layout="@layout/i_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
